--- a/Owncloud iOs Client/Owncloud iOs Client-Info.plist
+++ b/Owncloud iOs Client/Owncloud iOs Client-Info.plist
@@ -38,20 +38,8 @@
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFiles</key>
-	<array>
-		<string>MainAppIcon_40-40.png</string>
-		<string>MainAppIcon_40-40@2x.png</string>
-		<string>MainAppIcon_40-40@3x.png</string>
-		<string>MainAppIcon_29-29.png</string>
-		<string>MainAppIcon_29-29@2x.png</string>
-		<string>MainAppIcon_29-29@3x.png</string>
-		<string>MainAppIcon_60-60@2x.png</string>
-		<string>MainAppIcon_60-60@3x.png</string>
-		<string>MainAppIcon_76-76.png</string>
-		<string>MainAppIcon_76-76@2x.png</string>
-		<string>MainAppIcon_167-167.png</string>
-	</array>
+	<key>CFBundleIconName</key>
+	<string>MainAppIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
